[tool.poetry]
name = "project10-2"
version = "0.1.0"
description = ""
authors = ["Tatyana Karpenko <Tatyanna_ktp@mail.ru>"]
readme = "README.md"
packages = [{include = "project10"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
